module update from core change: change the way we store versioning and module info to package.json

--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "7thsensedelta",
-  "version": "0.0.2",
+  "version": "1.0.0",
+	"api_version": "1.0.0",
+	"support": { "action": true, "feedback": false, "preset": false },
+	"shortname": "delta",
+	"keywords": [ "Media Server" ],
+	"homepage": "https://7thsensedesign.com/delta-media-servers/",
+	"manufacturer": "7thSense Design",
+	"product": "Delta Media Server",
   "description": "Module to control 7th Sense Delta Media Server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Per Roine",
+  "author": "Per Røine <per.roine@gmail.com>",
   "license": "MIT"
 }
